src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AIM__Create_Interaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xAIM__sys_CreateInteraction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Enable_Interaction_Create__c</fullName>
        <defaultValue>true</defaultValue>
        <description>DO NOT USER THIS FIELD</description>
        <label>zObsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Enable_Task_Interaction_Create__c</fullName>
        <defaultValue>true</defaultValue>
        <description>We will check this field and if not set, an interaction FOR A TASK will not be created for this TASK. !!!THIS ONLY WORKS FOR TASKS!!!</description>
        <inlineHelpText>We will check this field and if not set, an interaction FOR A TASK will not be created for this TASK. !!!THIS ONLY WORKS FOR TASKS!!!</inlineHelpText>
        <label>AIM__Enable_Task_Interaction_Create__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Is_Duplicate_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify Events that are duplicates</description>
        <inlineHelpText>Used to identify Events that are duplicates</inlineHelpText>
        <label>Is_Duplicate_Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIM__Master_Event_Id__c</fullName>
        <description>If IsDuplicateEvent is true, this is populated with the event used to generate the interactions and references</description>
        <inlineHelpText>If IsDuplicateEvent is true, this is populated with the event used to generate the interactions and references</inlineHelpText>
        <label>Master_Event_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIM__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIM__Touch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Touch</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>